--- a/practice/2-02_tag/index.html
+++ b/practice/2-02_tag/index.html
@@ -31,5 +31,10 @@
       </div>
       <!-- /.container -->
     </footer>
+    <script src="script.js"></script>
+    <script>
+      "use strict";
+      console.log("よく柿食う客だ");
+    </script>
   </body>
 </html>
