--- a/practice/2-03_alert/index.html
+++ b/practice/2-03_alert/index.html
@@ -35,6 +35,7 @@
       'use strict';
       window.alert('アプリ連携が完了しました。');
       window.alert(1 + 3);
+      window.alert(1 * 8);
     </script>
   </body>
 </html>
