--- a/practice/4-03_math/index.html
+++ b/practice/4-03_math/index.html
@@ -22,7 +22,9 @@
     <main>
       <div class="container">
         <section>
-          <p>最終アクセス日時: <span id="time"></span></p>
+          <p>円周率は<span id="pi"></span>です。</p>
+          <p>普通に切り捨てると<span id="floor"></span>です。</p>
+          <p>少数第二位で切り捨てると<span id="output"></span>です。</p>
         </section>
       </div>
       <!-- /.container -->
@@ -36,22 +38,14 @@
     <script>
       'use strict';
 
-      const now   = new Date();
-      const year  = now.getFullYear();
-      const month = now.getMonth();
-      const date  = now.getDate();
-      const hour  = now.getHours();
-      const min   = now.getMinutes();
+      document.getElementById('pi').textContent     = Math.PI;
+      document.getElementById('floor').textContent  = Math.floor(Math.PI);
+      document.getElementById('output').textContent = point(Math.PI, 2);
 
-      let ampm = '';
-      if(hour < 12) {
-        ampm = 'a.m.';
-      } else {
-        ampm  = 'p.m.';
+      function point(num, digit) {
+        const mover = 10 ** digit;
+        return Math.floor(num * mover) / mover;
       }
-
-      const output = `${year}/${month + 1}/${date} ${hour % 12}:${min}${ampm}`;
-      document.getElementById('time').textContent = output;
     </script>
   </body>
 </html>
