[Add]jqueryナビメニュー

--- a/practice/6-01_menu/index.html
+++ b/practice/6-01_menu/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link href="../../_common/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -21,7 +22,28 @@
     </header>
     <main>
       <div class="container">
-        <section></section>
+        <section>
+          <div class="sidebar">
+            <h2>サポートページ</h2>
+            <div class="submenu">
+              <h3>1.初めて使う時</h3>
+              <ul class="hidden">
+                <li><a href="">- 概要</a></li>
+                <li><a href="">- インストールする</a></li>
+                <li><a href="">- アカウントを登録する</a></li>
+                <li><a href="">- あにんストールする</a></li>
+              </ul>
+            </div>
+            <div class="submenu">
+              <h3>2.基本的な使い方</h3>
+              <ul class="hidden">
+                <li><a href="">- 基本的な操作方法</a></li>
+                <li><a href="">- 元の状態に復元する</a></li>
+                <li><a href="">- 機能拡張プラグインを追加する</a></li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </div>
       <!-- /.container -->
     </main>
@@ -31,5 +53,7 @@
       </div>
       <!-- /.container -->
     </footer>
+    <script src="../../_common/scripts/jquery-3.4.1.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
