[Fix]コード修正

--- a/practice/6-02_drawer/css/index.html
+++ b/practice/6-02_drawer/css/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="special.css">
   </head>
   <body>
-
+    
+<!-- メインページ -->
     <div id="wrapper">
-
       <header>
         <div class="container">
           <div class="title-block">
@@ -27,7 +27,6 @@
           </div>
         </div>
       </header>
-
       <main>
         <div class="container">
           <section>
@@ -58,26 +57,26 @@
           </section>
         </div>
       </main>
-
       <footer>
         <div class="container">
           <p>JavaScript Samples</p>
         </div>
       </footer>
+    </div>
 
-  </div>
+<!-- メニューバー -->
+    <nav id="nav">
+      <div class="log"><img src="logo.svg" alt=""></div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">今月の特集</a></li>
+        <li><a href="#">ホテル検索</a></li>
+        <li><a href="#">カフェ検索</a></li>
+        <li><a href="#">お問い合わせ</a></li>
+      </ul>
+    </nav>
 
-  <nav id="nav">
-    <div class="log"><img src="logo.svg" alt=""></div>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">今月の特集</a></li>
-      <li><a href="#">ホテル検索</a></li>
-      <li><a href="#">カフェ検索</a></li>
-      <li><a href="#">お問い合わせ</a></li>
-    </ul>
-  </nav>
-  <script src="../../../_common/scripts/jquery-3.4.1.min.js"></script>
-  <script src="script.js"></script>
+    <script src="../../../_common/scripts/jquery-3.4.1.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
